Tue May 18 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.*: Minor changes to parser

Tue May 18 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c, render.c: Several small fixes to board appearance options

Wed May 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boards.xml, gtkprefs.c, render.c+.h, renderprefs.c:
	Add Taki-style rounded points

Mon May 10 21:33:28 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* external.h: move "#define closesocket close" to external.h

Sat May  8 11:25:08 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c, show.c: enlarge buffers

Fri May  7 21:13:26 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* external_l.l: fix buffer overflow.

Fri May  8 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.c, dice.c, set.c: Fix socket code for windows

Fri May  7 16:17:09 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Change union moverecord into struct moverecord
	(this is step 1 towards better support for editing positions
	and storing analysis)

 	* backgammon.h: Change union moverecord into struct moverecord
	(change a gazillion subroutines)

Fri May  8 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c, gtkpath.c, set.c: Added png to set path command

Fri May  7 07:48:47 CEST 2004  Joern Thyssen  <jth@gnubg.org>
                                                                                
        Prerelease 0.14.3. CVS tag is pre-rel-0-14-3
                                                                                
        * configure.in, gtkgame.c: prelease 0.14.3
                                                                                
Fri May  7 07:27:18 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: fix problems with initialisation of rollout
	contexts. This lead the problem about cubeless and cubeful
	equities being different for -1,-3C rollouts reported by
	Robert Eberlein.
