@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external.c,v 1.42 2004/05/10 19:37:44 thyssen Exp $
+ * $Id: external.c,v 1.43 2004/05/20 14:52:11 Superfly_Jon Exp $
  */
 
 #include "config.h"
@@ -366,9 +366,7 @@ ExtParse( const char *szCommand ) {
   ExtErrorHandler = ErrorHandler;
   fError = FALSE;
   szError = NULL;
-
-  ext_scan_string( szCommand );
-  extparse();
+  ExtStartParse(szCommand);
 
   return fError ? NULL : &ec;
 
