@@ -115,7 +115,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external_y.c,v 1.4 2004/05/18 14:42:14 Superfly_Jon Exp $
+ * $Id: external_y.c,v 1.5 2004/05/20 14:52:24 Superfly_Jon Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -1068,16 +1068,16 @@ yyreduce:
 #line 74 "external_y.y"
     { 
   ec.ct = COMMAND_FIBSBOARD;
-  g_free( ec.szFIBSBoard );
-  ec.szFIBSBoard = g_strdup( yyvsp[0].sval );
+  free( ec.szFIBSBoard );
+  ec.szFIBSBoard = yyvsp[0].sval;
 ;}
     break;
 
   case 8:
 #line 81 "external_y.y"
     { 
-  g_free( ec.szFIBSBoard );
-  ec.szFIBSBoard = g_strdup( yyvsp[0].sval );
+  free( ec.szFIBSBoard );
+  ec.szFIBSBoard = yyvsp[0].sval;
 ;}
     break;
 
@@ -1363,6 +1363,7 @@ reset_command() {
   ec.fDeterministic = 1;
   ec.fCubeful = 0;
   ec.nReduced = 0;
+  free(ec.szFIBSBoard);
   ec.szFIBSBoard = NULL;
 
 }
