@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.564 2004/05/14 14:27:16 Superfly_Jon Exp $
+ * $Id: gnubg.c,v 1.565 2004/05/20 14:52:25 Superfly_Jon Exp $
  */
 
 #include "config.h"
@@ -7644,6 +7644,7 @@ static void real_main( void *closure, int argc, char *argv[] ) {
           assert (lang != 0);
           sprintf (lang, "LANG=%s", szLang);
           putenv (lang);
+          free(lang);
 	}
 
 	outputon();
